[tool.poetry]
name = "np-tracking"
version = "0.1.0"
description = ""
authors = ["luzanovsky <luzanovsky@prb.team>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
